objects/Movement__c.object
<CustomObject>
    <fields>
        <fullName>Amt__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Total_PACE_financing_amount_Est__c ,  Opportunity__r.Financing_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cnt__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Movement_Date__c</fullName>
        <label>Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Conversions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Stage_Duration__c</fullName>
        <label>Prior Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Stage__c</fullName>
        <label>Prior Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Opp__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISBLANK(Lead__r.Project_Name__c), Lead__r.Company, 
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; NOT(ISBLANK(Lead__r.Project_Name__c)), Lead__r.Project_Name__c, 
IF(NOT(ISBLANK(Opportunity__r.Id)), Opportunity__r.Name, &quot;None&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Stage_Sorted__c</fullName>
        <formula>IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;Identified&quot;), &quot;0-Identified&quot;, 
IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;PreQualified&quot;), &quot;1-PreQualified&quot;, 
IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;Qualified&quot;), &quot;2-Qualified&quot;, 
IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;Quoted&quot;), &quot;3-Quoted&quot;,
IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;Dormant&quot;), &quot;9-Dormant&quot;,
IF( Lead__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL(Lead__r.Stage__c, &quot;Dead/Lost&quot;), &quot;9-Dead&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Initial App&quot;), &quot;4-Initial App&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Processing&quot;), &quot;5-Processing&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Underwriting&quot;), &quot;6-Underwriting&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Committed&quot;), &quot;7-Committed&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Closed&quot;), &quot;8-Closed&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Securitized&quot;), &quot;8-Securitized&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Dead&quot;), &quot;9-Dead&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Lost&quot;), &quot;9-Lost&quot;, 
IF( Opportunity__r.Id &lt;&gt; &quot;&quot; &amp;&amp; ISPICKVAL( Opportunity__r.StageName, &quot;Dormant&quot;), &quot;9-Dormant&quot;, 

&quot;&quot;)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Stage (Sorted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Stage__c</fullName>
        <label>Prospect Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Movement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Prior_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MV-{000000}</displayFormat>
        <label>Movement AutoID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>